devscripts (2.15.9) UNRELEASED; urgency=medium

  [ Joachim Breitner ]
  * mk-origtargz:
    + Work around tar --delete not working unless piping. This should
      make the support for Excluded-Files more reliable.
      Thanks to Felix Natter for identifying the problem and solution.

  [ James McCoy ]
  * bts:
    + Add reference to pts-subscribe(1) in bts(1).  (Closes: #794689)
  * tagpending:
    + Fix warning when there are no fixed bugs in the changelog.  (Closes:
      #795470)
    + Avoid querying the BTS when there are no bugs closed in the changelog.

 -- Joachim Breitner <nomeata@debian.org>  Tue, 11 Aug 2015 21:12:03 +0200

devscripts (2.15.8) unstable; urgency=high

  * licensecheck:
    + Avoid argument injection which may cause file to overwrite a file
      through symlink indirection.  (Closes: #794365, CVE-2015-5705)

 -- James McCoy <jamessan@debian.org>  Sun, 02 Aug 2015 09:06:05 -0400

devscripts (2.15.7) unstable; urgency=medium

  * licensecheck:
    + Use Dpkg::IPC to run file to avoid shell injection.
      (Closes: #794260, CVE-2015-5704)
    + Change whitelist of mime types to greylist of encodings.  Restores
      ability to check files with mime types like text/x-c++ and
      application/postscript.  Thanks to Jonas Smedegaard for the patch.
      (Closes: #794282)
    + Fix an endless loop in parsing certain files.  Thanks to Jonas
      Smedegaard for the patch.  (Closes: #794263)

 -- James McCoy <jamessan@debian.org>  Fri, 31 Jul 2015 22:50:33 -0400

devscripts (2.15.6) unstable; urgency=medium

  [ Paul Wise ]
  * Adjust wording of common suffixes passed to repacksuffix

  [ James McCoy ]
  * debcheckout:
    + Handle Launchpad Git URLs.  Thanks to Colin Watson for the patch.
      (Closes: #788777)
    + Handle authenticated checkout when Vcs-Darcs is missing the root /darcs
      directory.
  * checkbashisms:
    + Fix unescaped, literal curly brace in regex, causing FTBFS with Perl